[package]
name = "schmeud"
version = "0.0.11"
edition = "2021"

[lib]
name = "schmeud"
crate-type = ["cdylib", "lib"]

[dependencies]
num = "0.4"
ndarray = {version = "0.15", features = ["approx"]}
ndarray-linalg = { version = "0.16" }
ndarray-rand = "0.14"
numpy = "0.19"
petgraph = "0.6"
itertools-num = "0.1.3"
fastapprox = "0.3"
approx = "0.5"
glam = "0.24"
itertools = "0.10"
delaunator = "1.0"
robust = "1.1"

[dependencies.pyo3]
version = "0.19"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ml"
harness = false

[profile.bench]
debug = true

[features]
default = ["openblas-static", "rayon"]
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
rayon = ["ndarray/rayon"]

[package.metadata.maturin]
name = "schmeud._schmeud"