[package]
name = "schmeud"
version = "0.0.12"
edition = "2021"

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]


[lib]
name = "schmeud"
crate-type = ["cdylib", "lib"]

# there are more dependencies here than are actually used
# we're still playing around with stuff
[dependencies]
num = "0.4"
ndarray = {version = "0.15", features = ["approx"]}
ndarray-linalg = { version = "0.16" }
ndarray-rand = "0.14"
numpy = "0.19"
petgraph = "0.6"
itertools-num = "0.1.3"
fastapprox = "0.3"
approx = "0.5"
glam = "0.24"
itertools = "0.11"
delaunator = "1.0"
robust = "1.1"
nalgebra = "0.32"
cxx = "1.0"

[dependencies.pyo3]
version = "0.19"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "ml"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[features]
default = ["voro-static", "openblas-system", "rayon"]
voro-static = []
voro-system = []
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
rayon = ["ndarray/rayon"]

[package.metadata.maturin]
name = "schmeud._schmeud"