[project]
name = "schmeud"
version = "0.0.0"
description = "Codes used in MD analyses."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["md", "hoomd", "md-analysis"]
authors = [
    {email = "igraham@sas.upenn.edu"},
    {name = "Ian Graham"}
]
maintainers = [
    {name = "Ian Graham", email = "igraham@sas.upenn.edu"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "freud-analysis>=2.7.0",
    "gsd>=2.5",
    "pandas>=1.3",
    "numpy>=1.20",
    "scikit-learn>=1.0",
    "numba>=0.54",
    "jax>=0.3"
]

# [project.optional-dependencies]
# tests = [
#     "pytest>=7.1.2",
#     "py-spy>=0.3"
# ]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"