[project]
name = "schmeud"
# version = <look at Cargo.toml>
description = "Codes used in MD analyses."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["md", "hoomd", "md-analysis"]
authors = [{ email = "igraham@sas.upenn.edu" }, { name = "Ian Graham" }]
maintainers = [{ name = "Ian Graham", email = "igraham@sas.upenn.edu" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "freud-analysis>=2.7.0",
    "gsd>=2.5,<3.0",
    "pandas>=1.3",
    "numpy>=1.20",
    "scikit-learn>=1.0",
    "numba>=0.54",
    "jax[cpu]>=0.3",
]

[project.optional-dependencies]
test = ["pytest>=7.1.2"]
bench = ["py-spy>=0.3"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "schmeud._schmeud"

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"
